Added live camera feed viewing to frames