@@ -97,7 +97,7 @@ public class AlarmOptionsScreen extends Screen {
 	public void setSoundLength(int newSoundLength, boolean updateTimeEditBox) {
 		boolean enablePlusButtons;
 		boolean enableMinusButtons;
-		int soundLength = Math.max(1, Math.min(newSoundLength, AlarmBlockEntity.MAXIMUM_ALARM_SOUND_LENGTH));
+		int soundLength = Math.clamp(newSoundLength, 1, AlarmBlockEntity.MAXIMUM_ALARM_SOUND_LENGTH);
 
 		if (updateTimeEditBox)
 			soundLengthEditBox.setValue(String.format("%02d:%02d", soundLength / 60, soundLength % 60));
